[FIX] Aligning right in dashboard

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -7213,7 +7213,8 @@ th {
 .dashboard .contacts-info {
   border: 1px solid #777;
   margin: 10px;
-  padding: 10px 20px 10px 40px; }
+  padding: 10px 20px 10px 40px;
+  text-align: right; }
 
 .dashboard .today-totals {
   position: absolute;
