--- a/src/stylesheets/_dashboard.scss
+++ b/src/stylesheets/_dashboard.scss
@@ -49,6 +49,7 @@ $half: 75px;
     border: 1px solid #777;
     margin: 10px;
     padding: 10px 20px 10px 40px;
+    text-align: right;
   }
 
   .today-totals {
